cluster/apps/default/requestbin/app/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: requestbin
  name: requestbin
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: requestbin
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: requestbin
    spec:
      nodeSelector:
        beta.kubernetes.io/arch: amd64
      containers:
        - name: requestbin
          image: yoyostile/requestbin
          imagePullPolicy: Always
          # Sized from 30 days of observed usage.
          resources:
            requests:
              cpu: 10m
              memory: 96Mi
            limits:
              memory: 192Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
